--- a/0. Deep Learning from Scratch .ipynb
+++ b/0. Deep Learning from Scratch .ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> This directory contains Jupyter's notebook-based documentation for the **Deep Learning from Scractch** course. March 2017.\n",
+    "> This directory contains Jupyter's notebook-based documentation for the **Deep Learning from Scractch** course.\n",
     "\n",
     "\n",
     "Deep learning is one of the fastest growing areas of machine learning and a hot topic in both academia and industry. This course will cover the basics of deep learning by using a hands-on approach.\n",
@@ -48,48 +48,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "keras: 1.0.4\n",
-      "tensorflow:  0.11.0rc1\n"
+      "keras: 2.1.3\n",
+      "tensorflow:  1.5.0\n"
      ]
     }
    ],
    "source": [
     "import keras\n",
     "import tensorflow\n",
-    "print 'keras:', keras.__version__\n",
-    "print 'tensorflow: ', tensorflow.__version__"
+    "print('keras:', keras.__version__)\n",
+    "print('tensorflow: ', tensorflow.__version__)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
